added api methods for sensor
